<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layout_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/parking_rates"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <include layout="@layout/view_separator_medium_light_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/label_car_parking_rate"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/label_motorcycle_parking_rate"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/label_employee_parking_rate"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_contents"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:gravity="center_horizontal|center_vertical"
            android:padding="8dp"
            android:text="@string/close"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>