<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_report_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:layout_marginBottom="100dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ic_logo"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_parking_meter"
                    android:padding="4dp"
                    android:layout_alignParentStart="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/ic_logo"
                    android:padding="4dp"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parking_rate"
                        android:fontFamily="sans-serif-black"
                        android:textSize="25sp"
                        android:textColor="@color/blue"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calculator"
                        android:fontFamily="sans-serif-black"
                        android:textSize="25sp"
                        android:textColor="@color/blue"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:padding="16dp"
                android:background="@drawable/bg_rectangle_blue_outline">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_vehicle_type"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        android:textColor="@color/dark_blue"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        android:id="@+id/ic_rates"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_toEndOf="@id/label_radio_button"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:paddingTop="2dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_information_blue" />

                </RelativeLayout>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:checkedButton="@+id/radio_button_car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_button_car"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_car"/>
                    <RadioButton
                        android:id="@+id/radio_button_motorcycle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_motorcycle"/>
                    <RadioButton
                        android:id="@+id/radio_button_employee_vehicle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_employee_vehicle"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:background="@drawable/bg_rectangle_blue_outline"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/time_in"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_time_blue"
                    android:hint="@string/date_entered"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_date_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:background="@drawable/bg_rectangle_blue_outline"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/time_out"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/ic_time_blue"
                    android:hint="@string/date_departed"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_date_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/btn_compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@color/blue"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compute"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="18sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible"/>

</RelativeLayout>